--- a/XFormsUI/XFormsUI/Flaty.xaml
+++ b/XFormsUI/XFormsUI/Flaty.xaml
@@ -74,9 +74,9 @@
       <BoxView HeightRequest="1" Grid.Row="4" HorizontalOptions="Fill" BackgroundColor="White" VerticalOptions="End"/>
 
       <StackLayout Grid.Row="5" Spacing="12" HorizontalOptions="Fill" Padding="{x:Static Common:DoubleResources.ButtonGroupPadding}">
-        <Button Text="Sign Up" BackgroundColor="#1FBED6" HorizontalOptions="Fill" HeightRequest="40" TextColor="White"/>
+        <Button Text="Sign Up" BackgroundColor="#1FBED6" HorizontalOptions="Fill" TextColor="White" HeightRequest="{x:Static Common:DoubleResources.SignUpButtonHeight}"/>
 
-        <Image Source="fblogin.png" HorizontalOptions="Fill" HeightRequest="50" />
+        <Image Source="fblogin.png" HorizontalOptions="Fill" HeightRequest="{x:Static Common:DoubleResources.FBButtonHeight}"/>
 
         <StackLayout Spacing="5">
           <Label Text="Or click here to sign up using your email address"  HorizontalOptions="Center" TextColor="White" FontSize="12"/>
